devops-course-1/KB/k8s/practice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
